force-app/main/default/objects/HDT_UserInputFlow__mdt/HDT_UserInputFlow__mdt.object-meta.xml
<CustomObject>
    <label>HDT_UserInputFlow</label>
    <pluralLabel>HDT_UserInputFlow</pluralLabel>
</CustomObject>