force-app/main/default/objects/HDT_UserInputFlow__mdt/fields/FieldsJSON__c.field-meta.xml
<CustomField>
    <fullName>FieldsJSON__c</fullName>
    <label>Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>