force-app/main/default/objects/HDT_UserInputFlow__mdt/fields/ReadOnlyFields__c.field-meta.xml
<CustomField>
    <fullName>ReadOnlyFields__c</fullName>
    <label>ReadOnlyFields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>