force-app/main/default/objects/HDT_UserInputFlow__mdt/fields/ValidateClass__c.field-meta.xml
<CustomField>
    <fullName>ValidateClass__c</fullName>
    <label>Validate Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>