force-app/main/default/objects/HDT_UserInputFlow__mdt/listViews/InputFlows.listView-meta.xml
<ListView>
    <fullName>InputFlows</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ProcessType__c</columns>
    <columns>Commodity__c</columns>
    <filterScope>Everything</filterScope>
    <label>InputFlows</label>
    <language>en_US</language>
</ListView>